adding room db to store the list of saved items.

--- a/app/src/main/res/layout/name_layout_fragment.xml
+++ b/app/src/main/res/layout/name_layout_fragment.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="model"
-            type="com.arraigntech.triviaapp.ui.NameFragmentModel" />
+            type="com.arraigntech.triviaapp.ui.name.NameFragmentModel" />
         <variable
             name="isEnabledButton"
             type="Boolean" />
