--- a/app/src/main/res/layout/cricketer_layout_fragment.xml
+++ b/app/src/main/res/layout/cricketer_layout_fragment.xml
@@ -3,7 +3,7 @@
         <data>
             <variable
                 name="model"
-                type="com.arraigntech.triviaapp.ui.CricketFragmentModel" />
+                type="com.arraigntech.triviaapp.ui.cricket.CricketFragmentModel" />
         </data>
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
