--- a/app/src/main/res/layout/flag_fragment.xml
+++ b/app/src/main/res/layout/flag_fragment.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="model"
-            type="com.arraigntech.triviaapp.ui.FlagModelView" />
+            type="com.arraigntech.triviaapp.ui.flag.FlagModelView" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
